// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration navigates on apply advanced search 1`] = `[MockFunction]`;

exports[`integration navigates on apply advanced search 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?search=form%3A%28%22Two%22%29%20question%3A%28%22One%20eq%205%22%29%20something%20else",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`integration navigates on apply form filter 1`] = `[MockFunction]`;

exports[`integration navigates on apply form filter 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?search=form%3A%28%22Two%22%29%20question%3A%28%22One%20eq%205%22%29%20query",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`integration navigates on apply question filter 1`] = `[MockFunction]`;

exports[`integration navigates on apply question filter 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?search=form%3A%28%22Two%22%29%20question%3A%28%22One%20eq%205%22%29%20query",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`renders as expected (other page) 1`] = `
<div
  className="filters"
>
  <AdvancedSearchFilter
    onClear={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`renders as expected (responses page) 1`] = `
<div
  className="filters"
>
  <ButtonToolbar>
    <FormFilter
      onSubmit={[Function]}
    />
    <QuestionFilter
      onSubmit={[Function]}
    />
  </ButtonToolbar>
  <AdvancedSearchFilter
    onClear={[Function]}
    onSubmit={[Function]}
  />
</div>
`;
